--- a/scss/style.scss
+++ b/scss/style.scss
@@ -667,7 +667,7 @@ header .header_section {
 // footer section starts
 .footer_section {
     .container {
-        padding: 110px 0px;
+        padding: 110px 0px 50px;
         flex-direction: column;
 
         .footer_top_area {
